ec2.tf
# resource "aws_instance" "myec2" {
#   ami           = "ami-02d7fd1c2af6eead0"
#   instance_type = var.instancetype
# }
